ну тут ооочень много чего
