# services/token/internal/model/model.go
@@ -1,5 +1,9 @@
 package model
 
+import "time"
+
 type Token struct {
-	Token string
+	Token     string
+	AccountId string
+	ExpiresAt time.Time
 }
