# services/token/internal/repository/model.go
@@ -3,12 +3,8 @@ package repository
 import "time"
 
 type Token struct {
-	ID string `db:"id"`
+	Token     string `db:"token"`
+	AccountId string `db:"account_id"`
 
-	Ssh   string `db:"ssh"`
-	Token string `db:"token"`
-
-	CreatedAt time.Time `db:"created_at"`
-	UpdatedAt time.Time `db:"updated_at"`
-	DeletedAt time.Time `db:"deleted_at"`
+	ExpiresAt time.Time `db:"expires_at"`
 }
